# Beauty-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  user_sessions.json
app/: main.py
app/core/: chatbot.py  constants.py  telegram_bot.py
scripts/: run.bat  run.sh
